cuttlefish-frontend (0.9.28) UNRELEASED; urgency=medium

 -- Jorge Moreira <jemoreira@google.com>  Wed, 13 Sep 2023 11:59:23 -0700

cuttlefish-frontend (0.9.27) unstable; urgency=medium

  * Increase nofile soft limit to support passthrough GPU modes

 -- Jason Macnak <natsu@google.com>  Tue, 23 May 2023 08:58:58 -0700

cuttlefish-frontend (0.9.26) unstable; urgency=medium

  * Change operator's web UI to tile UI

 -- JaeMan Park <jaeman@google.com>  Fri, 13 Jan 2023 15:41:04 +0900

cuttlefish-frontend (0.9.25) unstable; urgency=medium

  [ Jorge Moreira Broche ]
  * Split source package into common and frontend

 -- JaeMan Park <jaeman@google.com>  Fri, 13 Jan 2023 15:40:49 +0900